# spartan-node-template

./: Cargo.toml
client/consensus/poc/: Cargo.toml
client/consensus/poc/rpc/: Cargo.toml
client/consensus/poc/rpc/src/: lib.rs
client/consensus/poc/src/: authorship.rs  aux_schema.rs  lib.rs  tests.rs  verification.rs
frame/poc/: Cargo.toml
frame/poc/src/: benchmarking.rs  default_weights.rs  equivocation.rs  lib.rs  randomness.rs
node/: Cargo.toml
pallets/template/: Cargo.toml
primitives/consensus/poc/: Cargo.toml
primitives/consensus/poc/src/: lib.rs
runtime/: Cargo.toml
