[package]
name = "pallet-poc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/spartan-node-template"
description = "Consensus extension module for PoC consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "3.1.0", default-features = false, path = "../../../substrate/frame/benchmarking", optional = true }
frame-support = { version = "3.0.0", default-features = false, path = "../../../substrate/frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../../substrate/frame/system" }
pallet-authorship = { version = "3.0.0", default-features = false, path = "../../../substrate/frame/authorship" }
pallet-session = { version = "3.0.0", default-features = false, path = "../../../substrate/frame/session" }
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../../substrate/frame/timestamp" }
serde = { version = "1.0.101", optional = true }
sp-application-crypto = { version = "3.0.0", default-features = false, path = "../../../substrate/primitives/application-crypto" }
sp-consensus-poc = { version = "0.1.0", default-features = false, path = "../../primitives/consensus/poc" }
sp-consensus-vrf = { version = "0.9.0", default-features = false, path = "../../../substrate/primitives/consensus/vrf" }
sp-io = { version = "3.0.0", default-features = false, path = "../../../substrate/primitives/io" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../../substrate/primitives/runtime" }
sp-session = { version = "3.0.0", default-features = false, path = "../../../substrate/primitives/session" }
sp-staking = { version = "3.0.0", default-features = false, path = "../../../substrate/primitives/staking" }
sp-std = { version = "3.0.0", default-features = false, path = "../../../substrate/primitives/std" }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
pallet-balances = { version = "3.0.0", path = "../../../substrate/frame/balances" }
pallet-offences = { version = "3.0.0", path = "../../../substrate/frame/offences" }
pallet-staking = { version = "3.0.0", path = "../../../substrate/frame/staking" }
pallet-staking-reward-curve = { version = "3.0.0", path = "../../../substrate/frame/staking/reward-curve" }
sp-core = { version = "3.0.0", path = "../../../substrate/primitives/core" }
frame-election-provider-support = { version = "3.0.0", path = "../../../substrate/frame/election-provider-support" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"serde",
	"sp-application-crypto/std",
	"sp-consensus-poc/std",
	"sp-consensus-vrf/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"log/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
