[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0', path = "../../../substrate/frame/system" }
frame-support = { default-features = false, version = '3.0.0', path = "../../../substrate/frame/support" }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0', path = "../../../substrate/frame/benchmarking" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0', path = "../../../substrate/primitives/core" }
sp-io = { default-features = false, version = '3.0.0', path = "../../../substrate/primitives/io" }
sp-runtime = { default-features = false, version = '3.0.0', path = "../../../substrate/primitives/runtime" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
runtime-benchmarks = ['frame-benchmarking']
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
