[package]
name = "sc-consensus-poc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "PoC consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/spartan-node-template"
documentation = "https://docs.rs/sc-consensus-babe"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-consensus-poc = { version = "0.1.0", path = "../../../primitives/consensus/poc" }
sp-core = { version = "3.0.0", path = "../../../../substrate/primitives/core" }
sp-application-crypto = { version = "3.0.0", path = "../../../../substrate/primitives/application-crypto" }
sp-keystore = { version = "0.9.0", path = "../../../../substrate/primitives/keystore" }
num-bigint = "0.2.3"
num-rational = "0.2.2"
num-traits = "0.2.8"
serde = { version = "1.0.104", features = ["derive"] }
sp-version = { version = "3.0.0", path = "../../../../substrate/primitives/version" }
sp-io = { version = "3.0.0", path = "../../../../substrate/primitives/io" }
sp-inherents = { version = "3.0.0", path = "../../../../substrate/primitives/inherents" }
sp-timestamp = { version = "3.0.0", path = "../../../../substrate/primitives/timestamp" }
sc-telemetry = { version = "3.0.0", path = "../../../../substrate/client/telemetry" }
sc-keystore = { version = "3.0.0", path = "../../../../substrate/client/keystore" }
sc-client-api = { version = "3.0.0", path = "../../../../substrate/client/api" }
sc-consensus-epochs = { version = "0.9.0", path = "../../../../substrate/client/consensus/epochs" }
sp-api = { version = "3.0.0", path = "../../../../substrate/primitives/api" }
sp-block-builder = { version = "3.0.0", path = "../../../../substrate/primitives/block-builder" }
sp-blockchain = { version = "3.0.0", path = "../../../../substrate/primitives/blockchain" }
sp-consensus = { version = "0.9.0", path = "../../../../substrate/primitives/consensus/common" }
sp-consensus-slots = { version = "0.9.0", path = "../../../../substrate/primitives/consensus/slots" }
sp-consensus-vrf = { version = "0.9.0", path = "../../../../substrate/primitives/consensus/vrf" }
sc-consensus-uncles = { version = "0.9.0", path = "../../../../substrate/client/consensus/uncles" }
sc-consensus-slots = { version = "0.9.0", path = "../../../../substrate/client/consensus/slots" }
sp-runtime = { version = "3.0.0", path = "../../../../substrate/primitives/runtime" }
sp-utils = { version = "3.0.0", path = "../../../../substrate/primitives/utils" }
fork-tree = { version = "3.0.0", path = "../../../../substrate/utils/fork-tree" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../../substrate/utils/prometheus", version = "0.9.0"}
futures = "0.3.9"
futures-timer = "3.0.1"
parking_lot = "0.11.1"
log = "0.4.8"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated"] }
rand = "0.7.2"
merlin = "2.0"
pdqselect = "0.1.0"
derive_more = "0.99.2"
retain_mut = "0.1.2"
async-trait = "0.1.42"

[dev-dependencies]
sp-keyring = { version = "3.0.0", path = "../../../../substrate/primitives/keyring" }
sp-tracing = { version = "3.0.0", path = "../../../../substrate/primitives/tracing" }
sc-executor = { version = "0.9.0", path = "../../../../substrate/client/executor" }
sc-network = { version = "0.9.0", path = "../../../../substrate/client/network" }
sc-network-test = { version = "0.8.0", path = "../../../../substrate/client/network/test" }
sc-service = { version = "0.9.0", default-features = false, path = "../../../../substrate/client/service" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../../substrate/test-utils/runtime/client" }
sc-block-builder = { version = "0.9.0", path = "../../../../substrate/client/block-builder" }
rand_chacha = "0.2.2"
tempfile = "3.1.0"
