[package]
name = "sp-consensus-poc"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for BABE consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/application-crypto" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
merlin = { version = "2.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/std" }
sp-api = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/api" }
sp-consensus = { version = "0.9.0", optional = true, path = "../../../../substrate/primitives/consensus/common" }
sp-consensus-slots = { version = "0.9.0", default-features = false, path = "../../../../substrate/primitives/consensus/slots" }
sp-consensus-vrf = { version = "0.9.0", path = "../../../../substrate/primitives/consensus/vrf", default-features = false }
sp-core = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/core" }
sp-inherents = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/inherents" }
sp-keystore = { version = "0.9.0", default-features = false, path = "../../../../substrate/primitives/keystore", optional = true }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/runtime" }
sp-timestamp = { version = "3.0.0", default-features = false, path = "../../../../substrate/primitives/timestamp" }
serde = { version = "1.0.123", features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"merlin/std",
	"sp-std/std",
	"sp-api/std",
	"sp-consensus",
	"sp-consensus-slots/std",
	"sp-consensus-vrf/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-timestamp/std",
	"serde",
]
